; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/bdb/extr_node-origins-table.c_svn_fs_bdb__open_node_origins_table.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/bdb/extr_node-origins-table.c_svn_fs_bdb__open_node_origins_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (i32, i8*, i32, i32, i32, i32)*, i32 (%struct.TYPE_6__*, i32)* }

@DB_CREATE = common dso_local global i32 0, align 4
@DB_EXCL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"node-origins\00", align 1
@DB_BTREE = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @svn_fs_bdb__open_node_origins_table(%struct.TYPE_6__** %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_6__** %0, %struct.TYPE_6__*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32, i32* @DB_CREATE, align 4
  %15 = load i32, i32* @DB_EXCL, align 4
  %16 = or i32 %14, %15
  br label %18

17:                                               ; preds = %3
  br label %18

18:                                               ; preds = %17, %13
  %19 = phi i32 [ %16, %13 ], [ 0, %17 ]
  store i32 %19, i32* %8, align 4
  %20 = call i32 (...) @svn_fs_bdb__check_version()
  %21 = call i32 @BDB_ERR(i32 %20)
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @db_create(%struct.TYPE_6__** %9, i32* %22, i32 0)
  %24 = call i32 @BDB_ERR(i32 %23)
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32 (i32, i8*, i32, i32, i32, i32)*, i32 (i32, i8*, i32, i32, i32, i32)** %26, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %29 = call i32 @SVN_BDB_OPEN_PARAMS(%struct.TYPE_6__* %28, i32* null)
  %30 = load i32, i32* @DB_BTREE, align 4
  %31 = load i32, i32* %8, align 4
  %32 = call i32 %27(i32 %29, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 0, i32 %30, i32 %31, i32 438)
  store i32 %32, i32* %10, align 4
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* @ENOENT, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %50

36:                                               ; preds = %18
  %37 = load i64, i64* %7, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %50, label %39

39:                                               ; preds = %36
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 1
  %42 = load i32 (%struct.TYPE_6__*, i32)*, i32 (%struct.TYPE_6__*, i32)** %41, align 8
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %44 = call i32 %42(%struct.TYPE_6__* %43, i32 0)
  %45 = call i32 @BDB_ERR(i32 %44)
  %46 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %47 = load i32*, i32** %6, align 8
  %48 = load i64, i64* @TRUE, align 8
  %49 = call i32 @svn_fs_bdb__open_node_origins_table(%struct.TYPE_6__** %46, i32* %47, i64 %48)
  store i32 %49, i32* %4, align 4
  br label %55

50:                                               ; preds = %36, %18
  %51 = load i32, i32* %10, align 4
  %52 = call i32 @BDB_ERR(i32 %51)
  %53 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %54 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  store %struct.TYPE_6__* %53, %struct.TYPE_6__** %54, align 8
  store i32 0, i32* %4, align 4
  br label %55

55:                                               ; preds = %50, %39
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local i32 @BDB_ERR(i32) #1

declare dso_local i32 @svn_fs_bdb__check_version(...) #1

declare dso_local i32 @db_create(%struct.TYPE_6__**, i32*, i32) #1

declare dso_local i32 @SVN_BDB_OPEN_PARAMS(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
